--- a/css/_inc/layouts/page-contribute/_search-results.sass
+++ b/css/_inc/layouts/page-contribute/_search-results.sass
@@ -38,8 +38,13 @@
 
         display: block
         font:
-          size: rem(13px)
+          family: $ff-meslo
+          size: rem(11px)
           weight: 500
+
+        mark
+          font:
+            family: $ff-meslo-bold
 
       em
         font:
