--- a/css/_inc/mixins/_z-index.sass
+++ b/css/_inc/mixins/_z-index.sass
@@ -1,4 +1,4 @@
-$elements: board-column-content, board-column-controls, ui-diver, dive-actions, contribute-form-search-results, nav, notification
+$elements: board-column-content, board-column-controls, ui-diver, dive-actions, contribute-form-search-results, nav, notification, loading-bar
 
 =z-index($element)
   z-index: index($elements, $element)
